# amharic-hnet-v2

./: .coverage  .coverage.Mekdess-Laptop.local.67175.XCzjXrPx  .gitignore  .pre-commit-config.yaml  300M_HNET_ARCHITECTURE.md  Amharic_H-Net_Training_Guide.md  CLAUDE.md  COMPREHENSIVE_EVALUATION_ANALYSIS.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENHANCEMENT_SUMMARY.md  EVALUATION_DELIVERABLES_INDEX.md  EXECUTIVE_EVALUATION_SUMMARY.md  FINAL_KAGGLE_SUBMISSION.csv  MLE_STAR_INTEGRATION_GUIDE.md  README.md  README_MLE_STAR_INTEGRATION.md  RETRAINING_SUMMARY.md  SUB_AGENT_WORKFLOW_GUIDE.md  advanced_optimization.py  agent_workflow_examples.md  analysis_report.md  boundary_tuning_results.txt  build_amharic_chatbot.py  chat-export-1753894628318.json  chat-export-1753928677289.json  cleanup_storage.py  compact_enhanced_training.py  compact_training.py  compare_model_outputs.py  competition_ready_package.py  comprehensive_model_evaluation.py  comprehensive_test_results.csv  correct_inference.py  correct_submission.csv  coverage.xml  create_final_corpus.py  create_large_morpheme_dataset.py  create_morpheme_dataset.py  create_practice_competition.py  (+65 more)
.claude/: HNET_THEORY_CRITICAL.md  README.md  amharic-hnet-agents.md  context.md  instructions.md
.claude/agents/: amharic-corpus-collector.md  amharic-data-collector.md  amharic-linguistic-analyzer.md  data-collector.md  deployment-engineer.md  documentation-generator.md  erpnext-performance-optimizer.md  evaluation-specialist.md  h-net-model-architect.md  linguistic-analyzer.md  model-architect.md  performance-optimizer.md  training-engineer.md
configs/: config.yaml  hnet_300m_config.yaml  minimal_test_config.yaml
configs/training/: base.yaml  large_model.yaml  transfer_learning.yaml
data/: boundary_training_data.json  expanded_boundary_training_data.json  morpheme_annotations.json
data/processed/: amharic_sample.txt  amharic_texts.txt  character_level_dataset.json  test_processed.json  valid_amharic_corpus.txt
data/raw/: DELIVERABLES_INDEX.md  FINAL_DATA_COLLECTION_REPORT.md  comprehensive_hnet_corpus.json  comprehensive_training_corpus_20250801_144630.json  corpus_collection_summary.md  final_hnet_training_corpus_20250801_144442.json  hnet_demo_corpus.json  premium_hnet_demo.json  sample_amharic.txt  supplemented_hnet_corpus_20250801_145849.json  test_collection_20250731_103508.json  test_collection_20250731_103508.stats.json  test_collection_20250731_103527.json  test_collection_20250731_103527.stats.json  test_corpus.json  test_report_20250731_103508.json  test_report_20250731_103527.json  validation_report.txt
deployment/: .env.example  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  deploy.sh  deploy_production.py  docker-compose.yml  requirements-production.txt  test_deployment.py  test_model_loading.py  verify_setup.sh
deployment/app/: __init__.py  auth.py  cache.py  config.py  cultural_safety.py  main.py  model_service.py  monitoring.py
deployment/monitoring/: prometheus.yml
docs/: setup_guide.md
kaggle_competition_package/: README.md  model_metadata.json  requirements.txt
kaggle_gpu_production/: CLAUDE_GPU_INTEGRATION_GUIDE.md  KAGGLE_CLI_COMMANDS.md  KAGGLE_GPU_DEPLOYMENT_GUIDE.md  MANUAL_UPLOAD_GUIDE.md  claude_gpu_training.py  create_kaggle_submission.py  dataset-metadata.json  deployment_monitor.py  deployment_report.json  kaggle_auto_deploy.py  kaggle_cli_deploy.py  kaggle_credentials.json  kaggle_gpu_deploy.py  kaggle_gpu_simple.py  kaggle_gpu_training.py  kaggle_inference.py  kernel-metadata.json  main.py  main_fixed.py  production_config.yaml  production_inference.py  requirements_production.txt  setup_kaggle_api.py  submission.csv  test_data.csv  test_gpu.py
kaggle_submission/: MODEL_CARD.md  inference.py  kaggle_model.py  requirements.txt  setup.sh  submission_metadata.json
lightweight_mle_star_results/: Lightweight_MLE_STAR_Test_Report.md  lightweight_test_results.json
scripts/: check_imports.py  validate_environment.py
scripts/training/: setup_training_env.sh
src/: linguistic_analyzer.py
tests/: conftest.py  test_morphemes.py
(+41 files in other folders)
